<resources>
    <string name="app_name">空调手环</string>
    <string name="title_name">我的手环</string>
    <string name="title_text">我的手环</string>
    <string name="user_name">布尔电气</string>
    <string name="collected_text">最新采集：</string>
    <string name="collectedTime_text">2016-04-19 21:00</string>
    <string name="celsius">℃</string>
    <string name="body_temperature_text">体温</string>
    <string name="body_temperature_degree">0.0</string>
    <string name="room_temperature_text">室温</string>
    <string name="room_temperature_degree">0.0</string>
    <string name="humidity_text">湿度</string>
    <string name="humidity_degree">0.0</string>
    <string name="percent">%</string>
    <string name="run_text">步数</string>
    <string name="run_amount">0</string>
    <string name="run_per">步</string>
    <string name="calorie_text">卡路里</string>
    <string name="calorie_amount">0.0</string>
    <string name="calorie_per">大卡</string>
    <string name="air_text">空调温度</string>
    <string name="air_condition_degree">0.0</string>
    <string name="call_for_help">求助设置</string>
    <string name="about">关于</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about_us">关于</string>
    <string name="ble_setting">蓝牙开关</string>
    <string name="pmv_text">舒适度</string>

    <string name="phone_num_cannot_be_empty"> 手机号不能为空！</string>
    <string name="connecting">正在连接</string>
    <string name="connecting_to_server">正在与服务器通信，请稍后</string>
    <string name="code_cannot_be_empty">密码不能为空！</string>
    <string name="fail_to_login">登录失败，请稍后重试</string>

    <string name="forget_PassWord"><u>忘记密码</u>？</string>
    <string name="register_text"><u>手机注册</u>></string>

    <string name="search_exit_text"><u>先退出暂不绑定设备</u></string>


    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
