<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/Main_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_btn_normal"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="10dp"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/iv_head"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/trademark"

                />

            <ImageView
                android:id="@+id/iv_air_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="20dp"
                android:src="@mipmap/ic_connected_air_condition"
                android:visibility="gone"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collected_text"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_collectedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/collectedTime_text"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/connectStateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            android:layout_marginTop="5dp"
            android:padding="6dp">

            <TextView
                android:id="@+id/connectState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="正在搜索"
                android:textColor="#fff"
                android:textSize="14sp"/>

            <ProgressBar
                android:id="@+id/connectStateProgress"
                android:layout_width="11dp"
                android:layout_height="11dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@+id/connectState"
                />

            <TextView
                android:id="@+id/electric_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="95"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginRight="36dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentEnd="true"
                android:visibility="gone"/>

            <com.test.smartband.view.BatteryView
                android:id="@+id/batteryview"
                android:layout_width="28dp"
                android:layout_height="14dp"
                android:layout_marginRight="2dp"
                android:layout_toLeftOf="@id/electric_quantity"
                android:layout_centerVertical="true"
                android:layout_alignTop="@+id/connectState"
                android:visibility="gone"
                />

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bluetooth_off_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">
        <!--android:background="#0a1432"-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tips_bluetooth_off"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="蓝牙未开启"
            android:textSize="16sp"
            android:textColor="@color/yellow_btn_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(点击开启）"
            android:textColor="#0a1432"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="44dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/roomtemperatrue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_temperature_text"
                    android:textColor="@color/baseBackground"/>
            </LinearLayout>

            <TextView
                android:id="@+id/room_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/room_temperature_degree"
                android:textSize="20sp"
                android:textColor="@color/color_black_ff333333"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/celsius"
                android:textColor="@color/color_black_ff333333"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="36dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/humidity"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_text"
                    android:textColor="@color/baseBackground"/>
            </LinearLayout>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/humidity_degree"
                android:textSize="20sp"
                android:textColor="@color/color_black_ff333333"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/percent"
                android:textColor="@color/color_black_ff333333"/>
        </LinearLayout>
    </LinearLayout>


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:layout_marginTop="4dp"-->
    <!--android:orientation="vertical">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="44dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bodytemperature"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_temperature_text"
                    android:textColor="@color/baseBackground"/>
            </LinearLayout>

            <TextView
                android:id="@+id/body_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/body_temperature_degree"
                android:textSize="20sp"
                android:textColor="@color/color_black_ff333333"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/celsius"
                android:textColor="@color/color_black_ff333333"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="34dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="4dp"
                    android:src="@drawable/run"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/run_text"
                    android:textColor="@color/baseBackground"/>
            </LinearLayout>

            <TextView
                android:id="@+id/run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/run_amount"
                android:textSize="20sp"
                android:textColor="@color/color_black_ff333333"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:text="@string/run_per"
                android:textColor="@color/color_black_ff333333"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="36dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="4dp"
                    android:src="@drawable/aircondition"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air_text"
                    android:textColor="@color/baseBackground"/>
            </LinearLayout>

            <TextView
                android:id="@+id/air_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/air_condition_degree"
                android:textSize="20sp"
                android:textColor="@color/color_black_ff333333"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:text="@string/celsius"
                android:textColor="@color/color_black_ff333333"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="33dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="4dp"
                    android:src="@drawable/pmv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/pmv_text"
                    android:textColor="@color/baseBackground"/>
            </LinearLayout>

            <TextView
                android:id="@+id/pmv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="--"
                android:textSize="20sp"
                android:textColor="@color/color_black_ff333333"/>

        </LinearLayout>
    </LinearLayout>


    <!--</LinearLayout>-->


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:orientation="horizontal"-->
    <!--android:weightSum="1">-->

    <!--<EditText-->
    <!--android:id="@+id/phone"-->
    <!--android:layout_width="196dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_weight="0.83"-->
    <!--android:ems="10"-->
    <!--android:hint="紧急联系人"-->
    <!--android:inputType="phone"/>-->

    <!--<Button-->
    <!--android:id="@+id/help"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="求助"/>-->
    <!--</LinearLayout>-->

</LinearLayout>